# eligibility-workers

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ingestion/: Dockerfile
ingestion/app/: document_ai.py  handler.py  main.py  resolver.py  settings.py  storage.py
ingestion/tests/: test_document_ai.py  test_handler.py
libs/python-common/: pyproject.toml
libs/python-common/src/eligibility_common/: __init__.py  app_factory.py  circuit.py  db.py  errors.py  events.py  health.py  http_middleware.py  idempotency.py  kms.py  logging.py  outbox.py  pubsub.py  retry.py  settings.py  tracing.py
libs/python-common/tests/: conftest.py  test_circuit.py  test_errors.py  test_kms.py  test_retry.py
libs/x12-834/: pyproject.toml
libs/x12-834/src/x12_834/: __init__.py  instruction.py  parser.py
libs/x12-834/tests/: test_parser.py
outbox-relay/: Dockerfile
outbox-relay/app/: main.py  settings.py
outbox-relay/tests/: test_relay.py
projector/: Dockerfile
projector/app/: handlers.py  main.py  os_index.py  read_model.py  redis_bridge.py  settings.py
projector/tests/: conftest.py  test_handlers.py
