[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eligibility-x12-834"
version = "0.1.0"
description = "Streaming ANSI X12 834 (5010X220A1) EDI parser"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/x12_834"]

[tool.hatch.build.targets.sdist]
include = [
    "src/x12_834",
    "tests",
    "README.md",
    "pyproject.toml",
]
